kubernetes/backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: user-app 
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: "topology.kubernetes.io/zone"
                operator: In
                values: ["us-east-1"]

        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: frontend
              topologyKey: "kubernetes.io/hostname"

        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values: [backend]
              topologyKey: "kubernetes.io/hostname"

      serviceAccountName: user-app
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsNonRoot: true
        runAsUser: 1001
      
      containers:
      - name: backend
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: false
        startupProbe:
          httpGet:
            path: /api/health
            port: 5000
            scheme: HTTP
          failureThreshold: 60
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /api/health
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /api/health
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 30
          failureThreshold: 3
          successThreshold: 1
        image: santoshpalla27/3-tier:kubernetes-backend-v1
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: user-app 
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: backend
