kubernetes/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: user-app 
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: "topology.kubernetes.io/zone"
                    operator: In
                    vvalues: ["us-east-1a", "us-east-1b", "us-east-1c"]

        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: backend
                topologyKey: "kubernetes.io/hostname"

        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values: [frontend]
                topologyKey: "kubernetes.io/hostname"

      serviceAccountName: user-app
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsNonRoot: true
        runAsUser: 1001

      volumes:
        - name: nginx-temp
          emptyDir: {}
        - name: nginx-run
          emptyDir: {} 

      containers:
        - name: frontend
          image: santoshpalla27/user-app:frontend-v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: nginx-temp
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run/nginx
          startupProbe:
            tcpSocket:
              port: 3000
            failureThreshold: 60
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            periodSeconds: 30
            timeoutSeconds: 5
            initialDelaySeconds: 0
            successThreshold: 1

    
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: user-app 
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: frontend
  type: ClusterIP
